# sentiment_analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  push_model.py  pyproject.toml  requirements.txt  streamlit_app.py
configs/: config.yaml
notebooks/: 01_eda.ipynb
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py  training_results.py
